# Alcia

./: .gitignore  .lcovrc  CMakeLists.txt  main.cpp  package-lock.json
.github/workflows/: c-cpp.yml
.scripts/: convert_str_to_int.py  readme.md
Data/: Enemies.json  Location.json
Enemies/: CMakeLists.txt
Enemies/src/: Enemy.cpp  Enemy.h  MonsterRegistry.cpp  MonsterRegistry.h
Entity/: CMakeLists.txt
Entity/src/: Enemy.cpp  Enemy.h  EnemyRegistry.cpp  EnemyRegistry.h  Entity.cpp  Entity.h  Player.cpp  Player.h
Entity/src/Components/: CMakeLists.txt
Entity/src/Components/src/: CharacterData.cpp  CharacterData.h  Component.h  Defense.cpp  Defense.h  Health.cpp  Health.h  Level.cpp  Level.h  Mana.cpp  Mana.h  Rewards.cpp  Rewards.h  Strength.cpp  Strength.h
Frontend/: package-lock.json  package.json
Frontend/app/: globals.css  layout.js  page.js  page.module.css
Frontend/app/components/: actionButton.css  actionButton.jsx  home.jsx  navbar.css  navbar.jsx  questsInfo.css  questsInfo.jsx  statsInfo.css  statsInfo.jsx
Frontend/app/components/MoneyAndSoulsComponent/: MoneyAndSoulsComponent.jsx  MoneyAndSoulsComponent.module.css
Frontend/app/components/Resource/: Resource.jsx  Resource.module.css
Frontend/app/components/TopBar/: TopBar.jsx  TopBar.module.css
Frontend/app/components/actionButton/: actionButton.css
Frontend/app/components/infoComponent/: infoComponent.css  infoComponent.jsx
Frontend/app/components/navbar/: Navbar.module.css  navbar.css  navbar.jsx
Frontend/app/components/questsInfo/: questsInfo.css
Frontend/app/components/statsInfo/: statsInfo.css  statsInfo.jsx
Frontend/app/pages/Game/: game.css  game.jsx
Frontend/app/pages/TitleScreen/: titleScreen.css  titleScreen.jsx
Frontend/embedded/: 404.html.hpp  all.hpp  favicon.ico.hpp  index.html.hpp  index.txt.hpp  logo.svg.hpp
Frontend/embedded/_next/static/04JX9fTFhcNRDoFOuliPc/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/1KwS0Ohk5EYoVUvurWgiF/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/1lIjkqJD4GLBtwGNdn05P/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/4vm2wNO-4IqAqxtTkBmcM/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/5AqZYqlsP6HDT35SjCJJm/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/5wcuoyHXCr8b6i0Nu3eor/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/9ato1V6nswnCcVg3TP-cL/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/GKO5P0g4JBQKYVRbq3KkH/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/NR1p289SSaOCFnFFphmy6/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/OgRbaCCmGVV-B7sw8_Wlq/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/QLD0dP38Q3XcAyzqAgllG/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/Sw1ZeDhqZHCox8uTmMC28/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/UWUGLs9sizjay2gBrcHWk/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/WR_oLMaS6DjCtniSC6_zE/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/Wg_49Z52eUINQe_vJ6_fG/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/YN9li7cTcoLL6baA-w5eT/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/YNLaXBJGwy-RZP2du7yzg/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/_PMvPRsxkpydcKT01OdSx/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/aTp6_WR96ojHhLCLbkBQf/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/chunks/: 173-4f078887a7bfcdfc.js.hpp  23-27c3037e8b778bed.js.hpp  23-7e3f169199317149.js.hpp  23-aed4f9542817658c.js.hpp  9c4e2130-f7aaa7e9d8159c7e.js.hpp  fd9d1056-62aaf4b921c84028.js.hpp  fd9d1056-be48aeae6e94b8d1.js.hpp  framework-f66176bb897dc684.js.hpp  main-4bf6a7d8c2e2f216.js.hpp  main-app-cc4909f79e204e1d.js.hpp  polyfills-78c92fac7aa8fdd8.js.hpp  webpack-4348c170047c0858.js.hpp  webpack-4b2f4dd2b19970fe.js.hpp  webpack-657fc0bfca26e05d.js.hpp  webpack-7016a1f7ac14d909.js.hpp  webpack-70ba2d17069729a6.js.hpp  webpack-b55ceb52700be514.js.hpp
Frontend/embedded/_next/static/css/: 187069c724057505.css.hpp  2075ce7c2ff51b5b.css.hpp  24b743590b183183.css.hpp  29f1aabbafd30e49.css.hpp  2c67854227f08a58.css.hpp  5ee820fbd10e5c5d.css.hpp  5f0b837438973343.css.hpp  638b556032e58464.css.hpp  7d46445e0d72a14d.css.hpp  9fd743687d9d256a.css.hpp  bbc2837c75ec24e2.css.hpp  caff5486eda43c94.css.hpp  f53fe17345d86589.css.hpp  fd97794f226f8bff.css.hpp
Frontend/embedded/_next/static/d98VVpMcfFhix7YHirC7M/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/hHr1V-Nh7uOEnSH4wX8HL/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/media/: b1355d6ff97b369f-s.p.ttf.hpp  ce19f3e9729e675c-s.p.ttf.hpp
Frontend/embedded/_next/static/q6btTuU6lvDNk6OurU_wb/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Frontend/embedded/_next/static/uImtJrdQSvF6tm3JtbiWT/: _buildManifest.js.hpp  _ssgManifest.js.hpp
Game/: CMakeLists.txt
Game/src/: Combat.cpp  Combat.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameInstance.cpp  GameInstance.h
Game/src/utils/: EnumTypes.h
Game/tests/: CMakeLists.txt  UTGameInstance.cpp
Map/: CMakeLists.txt
Map/src/: Connection.cpp  Connection.h  Location.h  Map.cpp  Map.h  Region.cpp  Region.h  SubRegion.cpp  SubRegion.h  World.cpp  World.h
Player/: CMakeLists.txt
Player/src/: CharacterAttributes.cpp  CharacterAttributes.h  Player.cpp  Player.h
Player/src/EntityComponents/: Defense.cpp  Defense.h  Experience.h  Health.cpp  Health.h  Level.cpp  Level.h  Mana.cpp  Mana.h  Strength.cpp  Strength.h
Player/tests/: CMakeLists.txt  UTPlayer.cpp
ViewModels/: CMakeLists.txt  readme.md
ViewModels/src/: EnemyViewModel.cpp  EnemyViewModel.h  PlayerViewModel.cpp  PlayerViewModel.h
(+35 files in other folders)
